[package]
name = "cardano-serialization-lib-py"
version = "1.0.0"
edition = "2018"

[lib]
name = "cardano_serialization_lib_py"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
cryptoxide = "0.2.1"
ed25519-bip32 = "0.3.1"
rand_core = "0.5.1"
bip39 = "0.6.0-beta.1"
bech32 = "0.7.2"
hex = "0.4.2"
cbor_event = "2.1.3"
crc = "1.8.1"
bs58 = "0.3.1"
linked-hash-map = "0.5.3"

# Caused by: failed to get 200 response from `https://static.crates.io/crates/inventory/inventory-0.1.9.crate`, got 206
# [dependencies.pyo3]
# version = "0.9.1"
# features = ["extension-module"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]

